Remove step counters from UI headings

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
 
         <!-- Main Content -->
         <main>
-            <!-- Step 1: Upload Video -->
+            <!-- Upload Video -->
             <section class="card" id="uploadSection">
                 <div class="card-header">
-                    <h2>📁 Step 1: Select Your Video</h2>
+                    <h2>📁 Select Your Video</h2>
                     <p>Upload a video file (MP4, MOV, AVI, MKV - Max 20MB)</p>
                 </div>
                 <div class="card-body">
@@ -43,10 +43,10 @@
                 </div>
             </section>
 
-            <!-- Step 2: API Key (if needed) -->
+            <!-- API Key (if needed) -->
             <section class="card" id="apiKeySection" style="display: none;">
                 <div class="card-header">
-                    <h2>🔑 Step 2: API Key (One-time Setup)</h2>
+                    <h2>🔑 API Key (One-time Setup)</h2>
                     <p>Enter your Google Gemini API key to analyze videos</p>
                 </div>
                 <div class="card-body">
@@ -60,10 +60,10 @@
                 </div>
             </section>
 
-            <!-- Step 3: Analyze -->
+            <!-- Analyze -->
             <section class="card" id="analyzeSection" style="display: none;">
                 <div class="card-header">
-                    <h2>🚀 Step 3: Analyze Video</h2>
+                    <h2>🚀 Analyze Video</h2>
                     <p>Process your video with AI</p>
                 </div>
                 <div class="card-body">
@@ -80,7 +80,7 @@
                 </div>
             </section>
 
-            <!-- Step 4: Results -->
+            <!-- Results -->
             <section class="card" id="resultsSection" style="display: none;">
                 <div class="card-header">
                     <h2>✅ Analysis Complete!</h2>
